force-app/main/default/objects/Song__c/fields/Album__c.field-meta.xml
<CustomField>
    <fullName>Album__c</fullName>
    <label>Album</label>
    <length>100</length>
    <type>Text</type>
</CustomField>