force-app/main/default/objects/Song__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <label>Artist</label>
    <length>200</length>
    <type>Text</type>
</CustomField>