force-app/main/default/objects/Song__c/fields/ReleaseYear__c.field-meta.xml
<CustomField>
    <fullName>ReleaseYear__c</fullName>
    <label>ReleaseYear</label>
    <length>100</length>
    <type>Text</type>
</CustomField>